--- a/index.html
+++ b/index.html
@@ -130,34 +130,26 @@
 
         <h1>Pandania NFT DaPP Coming Soon!!</h1>
         <p>For now try kill time by playing Pandee Hero!</p>
-        
-        <!-- Restore Original Style Buttons Here -->
         <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero</a>
         <br>
-
         <p>Launched on January 10th, 2022. One of the few remaining (OG) NFT collections on XprNetwork.</p>
         <p>There will only ever be 200 ProtonPanda NFTs in circulation.</p>
         <p>NFT Rarity: 80-Common(40%) | 50-Uncommon(25%) | 30-Epic(15%) | 25-Rare(12.5%) | 15-Ultra Rare(7.5%)</p>
-
         <a href="https://soon.market/collections/144534352512" class="green-button" target="_blank">Proton Pandas NFT Collection</a>
         <br>
-
         <p>Token Launched on June 1st, 2023...</p>
         <h3><center><img src="images/x-icon/pda-xprpanda-65x65.png"></center></h3>
         <h2>Buy on Alcor Exchange</h2>
         <iframe src="https://proton.alcor.exchange/trade/pda-xprpandas_xpr-eosio.token" width="445" height="600"></iframe>
-
         <a href="https://proton.alcor.exchange/swap?input=XPR-eosio.token&output=PDA-xprpandas" class="green-button" target="_blank">Swap PDA</a>
         <br>
         <p>Or</p>
         <a href="https://blastpad.io/staking-pool?poolId=33" class="green-button" target="_blank">Stake PDA</a>
         <br>
-
         <p>Total Capped Supply 555,555,555 Tokens.</p>
         <p>100% Of Supply In Circulation.</p>
         <img src="images/header/Token-Pi.png">
         <p>The Token Distribution for PDA is as follows: 65% to PandaVault liquidity, 15% to Xprpandas wallet (for community and events), 15% to the founder, and 5% to community airdrop.</p>
-        
         <a href="https://explorer.xprnetwork.org/tokens/PDA-proton-xprpandas" class="green-button" target="_blank">(PDA) XPRNetwork Explorer info</a>
         <br>
         <p>PDA Pandacoin is a Utility Token used to empower a decentralized commnunity on XPRNetwork.</p>
@@ -232,4 +224,26 @@
               }
             },
             transportOptions: {
-              requestAccount: "
+              requestAccount: "pandaniaxyz"
+            }
+          });
+
+          const hasAccess = await checkPDABalance(session);
+
+          if (hasAccess) {
+            document.body.classList.add("unlocked");
+            document.getElementById('main-content').style.display = "block";
+            document.getElementById("gate-cover").style.display = "none";
+          } else {
+            deniedMessage.style.display = "block";
+            connectBtn.style.display = "none";
+          }
+        } catch (err) {
+          alert("Wallet connection failed.");
+          console.error("Connection Error ⚠️", err);
+        }
+      });
+    });
+  </script>
+</body>
+</html>
