--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <img id="gate-panda-gif" src="images/header/protonpanda-gif.gif" alt="Proton Panda" />
     <div id="denied-message">
       <h2 class="denied-title">ACCESS DENIED</h2>
-      <p>🐼✌️ You need at least 555,555 PDA tokens to gain access to pandania.🌏</p>
+      <p>🐼✌️ You need atleast 555,555 PDA tokens to access gain access to pandania.🌏</p>
     </div>
   </div>
 
   <!-- Main site, stays hidden until access allowed -->
   <div id="main-content">
-    <!-- ... Place your main site content here ... -->
+    <!-- ... (Unchanged content goes here) ... -->
   </div>
 
   <script>
