--- a/index.html
+++ b/index.html
@@ -101,13 +101,74 @@
     <img id="gate-panda-gif" src="images/header/protonpanda-gif.gif" alt="Proton Panda" />
     <div id="denied-message">
       <h2 class="denied-title">ACCESS DENIED</h2>
-      <p>🐼✌️ You need atleast 555,555 PDA tokens to access gain access to pandania.🌏</p>
+      <p>🐼✌️ You need atleast 555,555 PDA tokens to gain access to pandania.🌏</p>
     </div>
   </div>
 
   <!-- Main site, stays hidden until access allowed -->
   <div id="main-content">
-    <!-- ... (Unchanged content goes here) ... -->
+    <header>
+      <div class="container">
+        <div class="logo">
+          <a href="/"><img src="images/x-icon/favicon.ico" alt="logo" /></a>
+        </div>
+        <div class="menu">
+          <a href="https://proton.alcor.exchange/positions/new?left=xpr-eosio.token&right=pda-xprpandas" target="_blank" rel="noopener noreferrer">
+            <center><img src="images/header/pda-favicon-32x32.png" alt="alcor exchange" /></center><p>Provide Liquidity</p>
+          </a>
+          <a href="https://twitter.com/protonpandas" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/x-favicon-16x16.png" /><p>X.com</p>
+          </a>
+          <a href="https://soon.market/collections/144534352512" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/soon-market-favicon-16x16.png" /><p>Soon.Market</p>
+          </a>
+          <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer">
+            <img src="images/header/telegram-favicon-16x16.png" /><p>Telegram</p>
+          </a>
+        </div>
+      </div>
+    </header>
+    <h2><center><img src="images/header/protonpanda-gif.gif"></center></h2>
+    <section class="container">
+      <div class="owner-status"></div>
+      <div class="countdown">
+
+        <h1>Pandania NFT DaPP Coming Soon!!</h1>
+        <p>For now try kill time by playing Pandee Hero!</p>
+        <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero</a>
+        <br>
+        <p>Launched on January 10th, 2022. One of the few remaining (OG) NFT collections on XprNetwork.</p>
+        <p>There will only ever be 200 ProtonPanda NFTs in circulation.</p>
+        <p>NFT Rarity: 80-Common(40%) | 50-Uncommon(25%) | 30-Epic(15%) | 25-Rare(12.5%) | 15-Ultra Rare(7.5%)</p>
+        <a href="https://soon.market/collections/144534352512" class="green-button" target="_blank">Proton Pandas NFT Collection</a>
+        <br>
+        <p>Token Launched on June 1st, 2023...</p>
+        <h3><center><img src="images/x-icon/pda-xprpanda-65x65.png"></center></h3>
+        <h2>Buy on Alcor Exchange</h2>
+        <iframe src="https://proton.alcor.exchange/trade/pda-xprpandas_xpr-eosio.token" width="445" height="600"></iframe>
+        <a href="https://proton.alcor.exchange/swap?input=XPR-eosio.token&output=PDA-xprpandas" class="green-button" target="_blank">Swap PDA</a>
+        <br>
+        <p>Or</p>
+        <a href="https://blastpad.io/staking-pool?poolId=33" class="green-button" target="_blank">Stake PDA</a>
+        <br>
+        <p>Total Capped Supply 555,555,555 Tokens.</p>
+        <p>100% Of Supply In Circulation.</p>
+        <img src="images/header/Token-Pi.png">
+        <p>The Token Distribution for PDA is as follows: 65% to PandaVault liquidity, 15% to Xprpandas wallet (for community and events), 15% to the founder, and 5% to community airdrop.</p>
+        <a href="https://explorer.xprnetwork.org/tokens/PDA-proton-xprpandas" class="green-button" target="_blank">(PDA) XPRNetwork Explorer info</a>
+        <br>
+        <p>PDA Pandacoin is a Utility Token used to empower a decentralized commnunity on XPRNetwork.</p>
+        <a href="https://t.me/+lPYmNDvlKAFlNzRh" target="_blank" rel="noopener noreferrer" class="hero-btn btn"><span>Join the #PandaFam</span></a>
+        <br>
+        <h2><center>$200 In Total Donations To Date.</center></h2>
+        <h3><center>Donated to The World WildLife Foundation</center></h3>
+        <img src="images/header/Conservation-planet.png">
+        <center>
+          <img src="images/header/Donation-Wwf.jpeg">
+          <img src="images/header/Donation-Wwfl.png">
+        </center>
+      </div>
+    </section>
   </div>
 
   <script>
