--- a/index.html
+++ b/index.html
@@ -543,6 +543,8 @@
           <a href="vote.html" class="green-button">Governance Voting</a>
           <!-- NEW: Play Pandee Hero Button -->
           <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero!</a>
+          <!-- Play Wackapandee Button -->
+          <a href="wackapandee.html" class="green-button">Play Wackapandee! (P2E)</a>
         </div>
       </div>
 
