--- a/wackapandee.html
+++ b/wackapandee.html
@@ -720,7 +720,7 @@
         },
         selectorOptions: {
           appName: "Wack a Pandee",
-          appLogo: "https://proton.org/static/media/proton-logo.svg",
+          appLogo: "https://bloks.io/cdn-cgi/image/width=70,height=70/https://lh3.googleusercontent.com/a/AAcHTtfsatkCTk0jlH6Iyg5S4HEEVtkMWXlHJrauBcYw=s288-c-rg-br100",
           customStyleOptions: {
             modalBackgroundColor: "#F4F7FA",
             logoBackgroundColor: "indigo",
