Update button for DeFi DaPP in index.html
Replaced 'Play Pandee Hero' button with 'DeFi DaPP' button.

--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
           <a href="https://soon.market/collections/144534352512" class="green-button" target="_blank">Proton Pandas NFT Collection</a>
           <!-- Governance Voting Button -->
           <a href="vote.html" class="green-button">Governance Voting</a>
-          <!-- NEW: Play Pandee Hero Button -->
-          <a href="https://flappycreator.com/flappy.php?id=66f90f9e9ad5f" class="green-button" target="_blank">Play Pandee Hero!</a>
+          <!-- NEW: DeFi DaPP Button -->
+          <a href="" target="_blank">DeFi DaPP Coming Soon...</a>
           <!-- Play Wackapandee Button -->
           <a href="wackapandee.html" class="green-button">Play Wackapandee! (P2E)</a>
         </div>
