--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <!-- Governance Voting Button -->
           <a href="vote.html" class="green-button">Governance Voting</a>
           <!-- NEW: DeFi DaPP Button -->
-          <a href="" target="_blank">DeFi DaPP Coming Soon...</a>
+          <a href="" class="green-button" target="_blank">DeFi DaPP Coming Soon...</a>
           <!-- Play Wackapandee Button -->
           <a href="wackapandee.html" class="green-button">Play Wackapandee! (P2E)</a>
         </div>
